# rcc

./: CHANGELOG.md  README.md  rcc.cabal  rdm.cabal
app/: Main.hs
docs/: main.tex
examples/: Coordinates.rsl  Database.rsl  Database2.rsl  Database_Type.rsl  ElectionDatabase.rsl  List.rsl  NatNumbers.rsl  Peano.rsl
src/: Eval.hs  Evaluator.hs  Expressions.hs  Language.hs  Parser.hs  Semantics.hs  TypeChecker.hs
tests/: Assign.rc  Fib.rc  Hello.rc  Iter.rc  Main.rc  Newvar.rc  Simple.rc  Swap.rc  swap.rc
