cabal-version:      3.0
name:               rcc
version:            0.0.0.1
synopsis:           Refinement Calculus Compiler
-- description:
homepage:           https://github.com/isaac025/rcc
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Lopez
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Parser
        Language
        Semantics
    default-extensions:
        OverloadedStrings
        ImportQualifiedPost
    build-depends:    base ^>=4.17.2.1
                    , parsec
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable rcc
    ghc-options:      -threaded -O2 -Wall
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
                    , rcc
                    , brick
                    , filepath
                    , directory
                    , vty
                    , microlens
                    , microlens-mtl
                    , microlens-th
    hs-source-dirs:   app
    default-language: Haskell2010
